--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "./node_modules/parcel-bundler/bin/cli.js index.html --port 8080",
     "build": "parcel build index.html"
   },
   "dependencies": {},
